src/front-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: network2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-front
  template:
    metadata:
      labels:
        app: nginx-front
    spec:
      containers:
        - image: nginx:1.27.2
          name: nginx

---
apiVersion: v1
kind: Service
metadata:
  name: svc-frontend
  namespace: network2
spec:
  ports:
    - name: nginx-web
      port: 80
  selector:
    app: nginx-front
