src/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-network2
  namespace: network2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host:
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-frontend
                port:
                  name: nginx-web
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: svc-backend
                port:
                  name: multi-web
